add frontend show action

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -3,4 +3,5 @@
   <h2>Name: <%= country.name %></h2>
   <h3>Capital: <%= country.capital %></h3>
   <p>Founded: <%= country.founded %></p>
+  <a href="/countries/<%= country.id %>">More info</a>
 <% end %>
