add frontend create action

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
     <%= javascript_include_tag 'application' %>
   </head>
 
-  <body>
+  <body style="font-family:helvetica;">
+    <div>
+      <a href="/countries">Home</a>
+      <a href="/countries/new">New country</a>
+    </div>
     <%= yield %>
   </body>
 </html>
