add frontend Create/edit actions

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -3,3 +3,4 @@
 <h3>Capital: <%= @country.capital %></h3>
 <p>Founded: <%= @country.founded %></p>
 <a href="/countries">Back to countries</a>
+<a href="/countries/<%= @country.id %>/edit">Edit country</a>
