add frontend destroy action

--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -4,3 +4,4 @@
 <p>Founded: <%= @country.founded %></p>
 <a href="/countries">Back to countries</a>
 <a href="/countries/<%= @country.id %>/edit">Edit country</a>
+<a href="/countries/<%= @country.id %>" data-method="delete">Destroy country</a>
